Fix README revert, move hero.solutions to _courses.scss, reduce active timeline spacing to 50px

--- a/assets/scss/case-studies.scss
+++ b/assets/scss/case-studies.scss
@@ -1,13 +1,6 @@
 // Case Studies & Interactive Storytelling Styles - Premium Modern Design
 @import "util/colors";
 
-/* Hero color variant for solutions/news */
-.hero.solutions {
-  background: $color-accent-blue;
-  background-image: url(../img/tech-bg.svg),
-    linear-gradient(145deg, $color-accent-blue 20%, $color-accent-blue-light 120%);
-}
-
 // Main case studies intro
 .case-studies-intro {
   text-align: left;
