--- a/assets/scss/elements/_courses.scss
+++ b/assets/scss/elements/_courses.scss
@@ -410,3 +410,10 @@
   background-image: url(../img/tech-bg.svg),
     linear-gradient(145deg, $color-accent-blue 20%, $color-accent-blue-light 120%);
 }
+
+/* Hero color variant for solutions/news */
+.hero.solutions {
+  background: $color-accent-blue;
+  background-image: url(../img/tech-bg.svg),
+    linear-gradient(145deg, $color-accent-blue 20%, $color-accent-blue-light 120%);
+}
