--- a/assets/scss/elements/_service-pathways.scss
+++ b/assets/scss/elements/_service-pathways.scss
@@ -250,7 +250,7 @@
 		}
 
 		&.active {
-			margin-bottom: 80px;
+			margin-bottom: 50px;
 		}
 
 		.stage-details {
